--- a/ai-solutions.html
+++ b/ai-solutions.html
@@ -5,22 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>AI Solutions & Automation | Code Cortex</title>
-  <meta name="description" content="AI, machine learning, and automation solutions by Code Cortex to optimize operations and drive intelligent decision-making." />
-  <meta name="keywords" content="AI solutions, machine learning, automation, data analytics, artificial intelligence" />
+  <title>AI Solutions & Machine Learning Services in Pakistan | Code Cortex</title>
+  <meta name="description" content="Professional AI & machine learning solutions in Pakistan. We build intelligent systems, automation, and data-driven applications for USA & UAE clients." />
+  <meta name="keywords" content="AI solutions Pakistan, machine learning services, artificial intelligence development, AI automation company" />
   <meta name="author" content="Code Cortex (Pvt.) Ltd." />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="AI Solutions | Code Cortex" />
-  <meta property="og:description" content="Smart AI-powered solutions for modern businesses." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/code_logo.png" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://codecortexdigital.github.io/com/ai-solutions.html" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
   <!-- Favicon -->
   <link rel="icon" href="assets/code_logo.png" />
@@ -28,133 +24,172 @@
 
 <body data-theme="dark">
 
-  <!-- Accessibility -->
+  <!-- Skip link -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <!-- Header -->
   <div id="site-header"></div>
 
-  <!-- Main -->
+  <!-- MAIN -->
   <main id="main-content">
 
     <!-- HERO -->
-    <section class="hero small-hero" data-aos="fade-up">
-      <h2>AI & Intelligent Solutions</h2>
+    <section class="hero">
+      <h1>AI Solutions & Machine Learning Services in Pakistan</h1>
       <p>
-        Harness the power of artificial intelligence to automate processes,
-        gain insights, and scale your business intelligently.
+        We design and build intelligent AI-powered systems that automate processes,
+        unlock insights, and drive smarter business decisions for global companies.
       </p>
+
+      <div class="hero-cta">
+        <a href="contact.html" class="btn btn-primary">Get AI Consultation</a>
+        <a href="services.html" class="btn btn-secondary">View All Services</a>
+      </div>
     </section>
 
-    <!-- OVERVIEW -->
-    <section data-aos="fade-up">
-      <h2>Our AI Capabilities</h2>
+    <!-- WHY US -->
+    <section>
+      <h2>Why Choose Code Cortex for AI Solutions?</h2>
 
       <div class="cards-container">
-
         <div class="card">
           <i class="fas fa-brain"></i>
-          <h3>Machine Learning</h3>
+          <h3>Business-Focused AI</h3>
           <p>
-            Predictive models, recommendation systems, and intelligent algorithms
-            tailored to your business data.
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-robot"></i>
-          <h3>Automation</h3>
-          <p>
-            Smart automation solutions that reduce manual effort and improve
-            operational efficiency.
+            AI solutions designed to solve real business problems, not just experiments.
           </p>
         </div>
 
         <div class="card">
           <i class="fas fa-chart-line"></i>
-          <h3>Data Analytics</h3>
+          <h3>Data-Driven Decisions</h3>
           <p>
-            Data-driven insights and dashboards for informed decision-making.
-          </p>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- USE CASES -->
-    <section data-aos="fade-up">
-      <h2>Business Use Cases</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fas fa-industry"></i>
-          <h3>Predictive Maintenance</h3>
-          <p>
-            Reduce downtime by predicting equipment failures using real-time data.
-          </p>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-shopping-cart"></i>
-          <h3>Customer Intelligence</h3>
-          <p>
-            Analyze customer behavior to personalize experiences and boost conversions.
+            Transform raw data into actionable insights with advanced analytics.
           </p>
         </div>
 
         <div class="card">
           <i class="fas fa-shield-alt"></i>
-          <h3>Fraud Detection</h3>
+          <h3>Secure & Ethical AI</h3>
           <p>
-            Identify suspicious activities and prevent fraud using AI-driven models.
+            Privacy-aware, secure, and compliant AI systems built responsibly.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES DETAILS -->
+    <section class="metrics">
+      <h2>Our AI & Machine Learning Expertise</h2>
+
+      <div class="cards-container">
+        <div class="card">
+          <h3>Machine Learning Models</h3>
+          <p>
+            Predictive and classification models tailored to your business needs.
           </p>
         </div>
 
+        <div class="card">
+          <h3>AI Automation</h3>
+          <p>
+            Automate repetitive tasks and workflows using intelligent systems.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Natural Language Processing</h3>
+          <p>
+            Chatbots, sentiment analysis, and text-based intelligence solutions.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Computer Vision</h3>
+          <p>
+            Image and video analysis for security, healthcare, and automation.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Data Analytics & Dashboards</h3>
+          <p>
+            Real-time dashboards and reporting for smarter decision-making.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>AI Integration</h3>
+          <p>
+            Seamless integration of AI models into existing software systems.
+          </p>
+        </div>
       </div>
     </section>
 
     <!-- PROCESS -->
-    <section data-aos="fade-up">
+    <section>
       <h2>Our AI Development Process</h2>
 
       <div class="cards-container">
-
         <div class="card">
-          <i class="fas fa-database"></i>
-          <h3>Data Assessment</h3>
+          <h3>1. Problem Discovery</h3>
           <p>
-            Understanding your data sources, quality, and readiness for AI.
+            Identify business challenges and AI opportunities.
           </p>
         </div>
 
         <div class="card">
-          <i class="fas fa-cogs"></i>
-          <h3>Model Development</h3>
+          <h3>2. Data Preparation</h3>
           <p>
-            Designing, training, and validating AI models aligned with your goals.
+            Data collection, cleaning, and feature engineering.
           </p>
         </div>
 
         <div class="card">
-          <i class="fas fa-rocket"></i>
-          <h3>Deployment & Optimization</h3>
+          <h3>3. Model Development</h3>
           <p>
-            Seamless deployment with continuous monitoring and improvement.
+            Training, evaluation, and optimization of AI models.
           </p>
         </div>
 
+        <div class="card">
+          <h3>4. Deployment & Monitoring</h3>
+          <p>
+            Production deployment with continuous performance monitoring.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- INDUSTRIES -->
+    <section class="metrics">
+      <h2>Industries We Serve</h2>
+
+      <div class="cards-container">
+        <div class="card"><p>Healthcare</p></div>
+        <div class="card"><p>Finance & FinTech</p></div>
+        <div class="card"><p>E-Commerce</p></div>
+        <div class="card"><p>Manufacturing</p></div>
+        <div class="card"><p>Logistics</p></div>
+        <div class="card"><p>Education</p></div>
       </div>
     </section>
 
     <!-- CTA -->
-    <section class="final-cta" data-aos="fade-up">
-      <h2>Ready to Leverage AI?</h2>
-      <p>Let’s build intelligent solutions that drive real business value.</p>
+    <section class="final-cta">
+      <h2>Ready to Leverage AI for Your Business?</h2>
+      <p>
+        Let’s build intelligent solutions that give you a competitive advantage.
+      </p>
 
       <a href="contact.html" class="btn-large">
-        Talk to AI Experts
+        Request AI Consultation
       </a>
+
+      <p class="small-text">
+        Or email us directly at <strong>info@codecortexdigital.com</strong>
+      </p>
     </section>
 
   </main>
@@ -164,7 +199,6 @@
 
   <!-- Scripts -->
   <script src="js/include.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script src="js/main.js"></script>
 
 </body>
