--- a/about.html
+++ b/about.html
@@ -5,15 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>About Us | Code Cortex</title>
-  <meta name="description" content="Learn about Code Cortex, our mission, vision, and the values that drive our web, mobile, and AI solutions." />
-  <meta name="keywords" content="about Code Cortex, software house Pakistan, IT company mission vision" />
+  <title>About Code Cortex | Software Development Company in Pakistan</title>
+  <meta name="description" content="Learn about Code Cortex, a leading software development company in Pakistan providing web, mobile & AI solutions for USA & UAE clients." />
+  <meta name="keywords" content="about software house Pakistan, Code Cortex company, software development company Pakistan, offshore development team" />
   <meta name="author" content="Code Cortex (Pvt.) Ltd." />
+  <meta name="robots" content="index, follow" />
 
-  <!-- STYLES -->
-  <link rel="stylesheet" href="/com/css/theme.css" />
+  <!-- Canonical -->
+  <link rel="canonical" href="https://codecortexdigital.github.io/com/about.html" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="icon" href="/com/assets/code_logo.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="assets/code_logo.png" />
 </head>
 
 <body data-theme="dark">
@@ -21,29 +27,34 @@
   <!-- Skip link -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
-  <!-- HEADER -->
+  <!-- Header -->
   <div id="site-header"></div>
 
-  <!-- MAIN CONTENT -->
+  <!-- MAIN -->
   <main id="main-content">
 
     <!-- HERO -->
     <section class="hero">
-      <h2>About Code Cortex</h2>
+      <h1>About Code Cortex</h1>
       <p>
-        We are a technology-driven software company helping businesses
-        build scalable digital solutions.
+        We are a Pakistan-based software development company helping global
+        businesses scale with reliable web, mobile, and AI solutions.
       </p>
+
+      <div class="hero-cta">
+        <a href="contact.html" class="btn btn-primary">Contact Us</a>
+        <a href="services.html" class="btn btn-secondary">Our Services</a>
+      </div>
     </section>
 
     <!-- WHO WE ARE -->
     <section>
       <h2>Who We Are</h2>
-      <p style="max-width:900px; margin:0 auto;">
-        Code Cortex is a Pakistan-based software company delivering
-        high-quality web, mobile, and AI-powered solutions to clients
-        across the USA, UAE, and beyond. We focus on innovation,
-        performance, and long-term partnerships.
+      <p style="max-width: 900px; margin: auto;">
+        Code Cortex is a professional software development company in Pakistan,
+        focused on delivering scalable, secure, and high-quality digital solutions.
+        We work with startups, enterprises, and international clients across
+        USA, UAE, and other global markets.
       </p>
     </section>
 
@@ -55,8 +66,8 @@
           <i class="fas fa-bullseye"></i>
           <h3>Our Mission</h3>
           <p>
-            To empower businesses with reliable, scalable, and secure
-            digital products that accelerate growth.
+            To empower businesses by providing reliable software solutions
+            that accelerate growth and improve efficiency.
           </p>
         </div>
 
@@ -64,8 +75,8 @@
           <i class="fas fa-eye"></i>
           <h3>Our Vision</h3>
           <p>
-            To become a globally trusted technology partner known for
-            innovation, quality, and transparency.
+            To become a globally trusted software development partner
+            known for quality, transparency, and innovation.
           </p>
         </div>
 
@@ -73,8 +84,8 @@
           <i class="fas fa-handshake"></i>
           <h3>Our Values</h3>
           <p>
-            Integrity, collaboration, continuous learning, and
-            customer success are at the core of everything we do.
+            Transparency, long-term partnerships, technical excellence,
+            and client success.
           </p>
         </div>
 
@@ -88,39 +99,77 @@
       <div class="cards-container">
         <div class="card">
           <i class="fas fa-users"></i>
-          <h3>Expert Team</h3>
-          <p>Skilled professionals with hands-on industry experience.</p>
+          <h3>Dedicated Teams</h3>
+          <p>
+            Skilled engineers working as an extension of your in-house team.
+          </p>
         </div>
 
         <div class="card">
           <i class="fas fa-clock"></i>
           <h3>On-Time Delivery</h3>
-          <p>We respect deadlines and deliver projects on schedule.</p>
+          <p>
+            Agile process ensuring timely delivery without compromising quality.
+          </p>
         </div>
 
         <div class="card">
-          <i class="fas fa-shield-alt"></i>
-          <h3>Secure Solutions</h3>
-          <p>Security-first approach in all our development processes.</p>
+          <i class="fas fa-lock"></i>
+          <h3>Secure Development</h3>
+          <p>
+            Best practices for data protection, security, and compliance.
+          </p>
         </div>
+
+        <div class="card">
+          <i class="fas fa-globe"></i>
+          <h3>Global Experience</h3>
+          <p>
+            Proven experience working with international clients and markets.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- TECHNOLOGY STACK -->
+    <section class="metrics">
+      <h2>Technologies We Work With</h2>
+
+      <div class="cards-container">
+        <div class="card"><p>HTML, CSS, JavaScript</p></div>
+        <div class="card"><p>React, Angular, Vue</p></div>
+        <div class="card"><p>Node.js, Python, PHP</p></div>
+        <div class="card"><p>Flutter, React Native</p></div>
+        <div class="card"><p>AI & Machine Learning</p></div>
+        <div class="card"><p>Cloud & DevOps</p></div>
       </div>
     </section>
 
     <!-- CTA -->
     <section class="final-cta">
-      <h2>Want to Work With Us?</h2>
-      <p>Let’s discuss how we can help your business grow.</p>
-      <a href="/com/contact.html" class="btn-large">Contact Us</a>
+      <h2>Let’s Build Something Great Together</h2>
+      <p>
+        Looking for a reliable software development partner?
+        We’d love to hear about your project.
+      </p>
+
+      <a href="contact.html" class="btn-large">
+        Start a Conversation
+      </a>
+
+      <p class="small-text">
+        Or email us directly at <strong>info@codecortexdigital.com</strong>
+      </p>
     </section>
 
   </main>
 
-  <!-- FOOTER -->
+  <!-- Footer -->
   <div id="site-footer"></div>
 
-  <!-- SCRIPTS -->
-  <script src="/com/js/include.js"></script>
-  <script src="/com/js/main.js"></script>
+  <!-- Scripts -->
+  <script src="js/include.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
