--- a/web-development.html
+++ b/web-development.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="canonical" href="https://www.codecortexdigital.com/about">
 
   <!-- SEO -->
   <title>Web Development Services in Pakistan | Code Cortex</title>
