--- a/index.html
+++ b/index.html
@@ -1,168 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- ================= SEO ================= -->
-  <title>Code Cortex | Strategic Development Partner for USA & UAE</title>
-  <meta name="description" content="Code Cortex provides elite engineering teams for web, mobile & AI solutions. 40% faster delivery, 60% cost savings." />
-  <meta name="keywords" content="software house Pakistan, web development, mobile apps, AI solutions, remote developers" />
-  <meta name="author" content="Code Cortex (Pvt.) Ltd." />
-  <meta name="robots" content="index, follow" />
+<title>Code Cortex | Strategic Development Partner</title>
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://codecortexdigital.github.io/com/" />
+<meta name="description" content="Code Cortex provides elite engineering teams for web, mobile & AI solutions.">
+<meta name="author" content="Code Cortex (Pvt.) Ltd.">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Code Cortex – Strategic Development Partner" />
-  <meta property="og:description" content="Elite Pakistani engineering talent for USA & UAE markets." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://codecortexdigital.github.io/com/" />
-  <meta property="og:image" content="https://codecortexdigital.github.io/com/assets/code_logo.png" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/theme.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- Favicon -->
-  <link rel="icon" href="assets/code_logo.png" />
-
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Code Cortex (Pvt.) Ltd.",
-    "url": "https://codecortexdigital.github.io/com/",
-    "logo": "https://codecortexdigital.github.io/com/assets/code_logo.png",
-    "email": "info@codecortexdigital.com",
-    "telephone": "+92-315-722-7688",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Attock",
-      "addressCountry": "PK"
-    }
-  }
-  </script>
+<link rel="stylesheet" href="./css/theme.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="icon" href="./assets/code_logo.png">
 </head>
 
 <body data-theme="dark">
 
-  <!-- Accessibility -->
-  <a href="#main-content" class="skip-link">Skip to main content</a>
+<div id="site-header"></div>
 
-  <!-- HEADER -->
-  <div id="site-header"></div>
+<main>
 
-  <!-- MAIN -->
-  <main id="main-content">
-
-    <!-- HERO -->
-    <section class="hero" id="hero">
-      <h2>Your Strategic Development Partner for USA & UAE Markets</h2>
-
-      <p>
-        Elite Pakistani engineering talent delivering enterprise software
-        <strong>40% faster</strong> at <strong>60% cost savings</strong>.
-      </p>
-
-      <div class="hero-cta">
-        <a href="contact.html" class="btn btn-primary">Get Free Consultation</a>
-        <a href="services.html" class="btn btn-secondary">Our Services</a>
-      </div>
-
-      <div class="social-proof">
-        <p>Trusted by companies in:</p>
-        <div class="client-logos">
-          <span>USA</span>
-          <span>UAE</span>
-          <span>Pakistan</span>
-        </div>
-      </div>
-    </section>
-
-    <!-- METRICS -->
-    <section class="metrics">
-      <div class="metrics-container">
-        <div class="metric-item">
-          <h3>50+</h3>
-          <p>Projects Delivered</p>
-        </div>
-        <div class="metric-item">
-          <h3>99%</h3>
-          <p>Client Retention</p>
-        </div>
-        <div class="metric-item">
-          <h3>40%</h3>
-          <p>Faster Delivery</p>
-        </div>
-        <div class="metric-item">
-          <h3>60%</h3>
-          <p>Cost Savings</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- SERVICES -->
-    <section id="services">
-      <h2>We Solve Business Challenges</h2>
-
-      <div class="cards-container">
-
-        <div class="card">
-          <i class="fas fa-code"></i>
-          <h3>Web Development</h3>
-          <p>Scalable, secure, high-performance web applications.</p>
-          <a href="web-development.html" class="btn btn-primary">Learn More</a>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-mobile-alt"></i>
-          <h3>Mobile Applications</h3>
-          <p>Android & iOS apps with clean UI and strong architecture.</p>
-          <a href="mobile-apps.html" class="btn btn-primary">Learn More</a>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-brain"></i>
-          <h3>AI Solutions</h3>
-          <p>Automation, analytics, and AI-powered business systems.</p>
-          <a href="ai-solutions.html" class="btn btn-primary">Learn More</a>
-        </div>
-
-        <div class="card">
-          <i class="fas fa-headset"></i>
-          <h3>Maintenance & Support</h3>
-          <p>Continuous monitoring, updates, and technical support.</p>
-          <a href="maintenance.html" class="btn btn-primary">Learn More</a>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- CAREERS CTA -->
-    <section class="final-cta">
-      <h2>Ready to Grow Your Career?</h2>
-      <p>Be part of a team shaping the future of technology.</p>
-
-      <a href="mailto:info@codecortexdigital.com?subject=Job Application - Code Cortex"
-         class="btn-large">
-        Apply Now
-      </a>
-    </section>
-
-  </main>
-
-  <!-- FOOTER -->
-  <div id="site-footer"></div>
-
-  <!-- SCRIPTS -->
-  <script src="js/include.js"></script>
-  <script src="js/main.js"></script>
-
-</body>
-</html>
+<section class="hero">
+  <h2>Your Strategic Development Partner</h2>
+  <p>Elite engineering talent delivering faster & cost-effective solutions.</p>
+  <div class="hero-cta">
+    <a href="./contact.html" class="btn btn-primary">Get Free Consultation</a>
+    <a href="./services.html" class="btn btn-secondar
