--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <!-- Primary Meta Tags -->
   <title>Code Cortex | Premier Software House in Pakistan | Digital Solutions</title>
-  <meta name="description" content="Code Cortex is a leading software development company in Pakistan providing enterprise-grade web, mobile, AI solutions, and digital transformation services for global clients.">
+  <meta name="description" content="Code Cortex is a leading software development company in Attock Pakistan providing enterprise-grade web, mobile, AI solutions, and digital transformation services for global clients.">
   <meta name="keywords" content="software development Pakistan, web development company, mobile app development, AI solutions, enterprise software, digital transformation, custom software development, technology consulting, IT outsourcing Pakistan">
   <meta name="author" content="Code Cortex (SMC-Pvt.) Ltd.">
   <meta name="robots" content="index, follow">
@@ -1436,4 +1436,5 @@
 
 </body>
 </html>
+
 
