--- a/index.html
+++ b/index.html
@@ -1600,6 +1600,11 @@
         location: "Attock, Pakistan",
         type: "Full-time"
       }
+      {
+        title: "Intern / Junior Role",
+        location: "Attock, Pakistan",
+        type: "Full-time"
+      }
     ];
     
     careersList.innerHTML = jobs.map(job => `
@@ -1619,3 +1624,4 @@
 
 </body>
 </html>
+
