--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         }],
         "sameAs": [
           "https://www.linkedin.com/in/code-cortex-a8188b379/",
+    <div class="social-links">
+  <a href="https://www.linkedin.com/in/code-cortex-a8188b379/" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-linkedin"></i> LinkedIn
+  </a>
+</div>
           "https://github.com/codecortex",
           "https://twitter.com/codecortex",
           "https://www.facebook.com/codecortex"
@@ -1566,5 +1571,6 @@
 
 </body>
 </html>
+
 
 
