--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           "availableLanguage": ["English", "Urdu"]
         }],
         "sameAs": [
-          "https://www.linkedin.com/in/code-cortex-a8188b379/",
-          "https://github.com/codecortex",
-          "https://twitter.com/codecortex",
-          "https://www.facebook.com/codecortex"
-        ],
+  "https://www.linkedin.com/in/code-cortex-a8188b379/",
+  "https://github.com/codecortex",
+  "https://twitter.com/codecortex",
+  "https://www.facebook.com/codecortex"
+],
         "foundingDate": "2023",
         "founders": [{
           "@type": "Person",
@@ -1248,7 +1248,7 @@
         Delivering innovative software solutions that drive business transformation, and digital growth.
       </p>
       <div style="display: flex; gap: 1rem;">
-        <a href="https://www.linkedin.com/company/code-cortex" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
+        <a href="https://www.linkedin.com/in/code-cortex-a8188b379/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
           <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/codecortex" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
@@ -1566,6 +1566,7 @@
 
 </body>
 </html>
+
 
 
 
