--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }],
         "sameAs": [
   "https://www.linkedin.com/in/code-cortex/",
-  "https://github.com/codecortex",
+  "https://github.com/codecortexdigital",
   "https://twitter.com/codecortex",
   "https://www.facebook.com/codecortex"
 ],
@@ -1251,7 +1251,7 @@
         <a href="https://www.linkedin.com/in/code-cortex-a8188b379/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/codecortex" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
+        <a href="https://github.com/codecortexdigital" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://twitter.com/codecortex" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile" style="color: var(--text-muted); font-size: 1.25rem; transition: var(--transition);">
@@ -1566,6 +1566,7 @@
 
 </body>
 </html>
+
 
 
 
